<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/price_stats"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/price">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24H Open"
        android:textColor="?attr/titleTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/price_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ci_tv_open_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ci_tv_price_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_open" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24H Change"
        android:textColor="?attr/titleTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/price_open"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ci_tv_price_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textFillColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ci_tv_open_price"
        app:layout_constraintTop_toBottomOf="@+id/price_change" />
</androidx.constraintlayout.widget.ConstraintLayout>