<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.CryptoStats">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/ci_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:titleTextColor="?attr/titleTextColor" />
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/coin_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="?attr/colorOnSurface"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/data_actuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/titleTextColor"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/coin_spinner" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

            <include layout="@layout/stat24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Price"
                android:textColor="?attr/titleTextColor"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/container_stat24" />

            <include layout="@layout/price24" />

            <include layout="@layout/price" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Changes"
                android:textColor="?attr/titleTextColor"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/current_price_stats" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:layout_constraintTop_toBottomOf="@+id/changes" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/candles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Candles"
                android:textColor="?attr/titleTextColor"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/chart" />

            <com.github.mikephil.charting.charts.CandleStickChart
                android:id="@+id/candle_stick_chart"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:layout_constraintTop_toBottomOf="@+id/candles" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="Trades"
                android:textColor="?attr/titleTextColor"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/candle_stick_chart" />

            <include layout="@layout/trades" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>